<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:scrollbars="none"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1" >
                <TextView
                    android:id="@+id/title_nemo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="55dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/app_name_k"
                    android:textSize="35sp"
                    android:scaleType="centerInside"
                    />
            </LinearLayout>

            <ImageButton
                android:id="@+id/setting_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/settings_icon"
                android:scaleType="centerInside"
                android:soundEffectsEnabled="false"/>

        </LinearLayout>

        <Button
            android:id="@+id/character_button"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="20dip"
            android:drawableLeft="@drawable/nemo_mini"
            android:gravity="center|center_vertical"
            android:background="#eb5d5d"
            android:text="@string/category1"
            android:textSize="23dp"
            android:soundEffectsEnabled="false"/>

        <Button
            android:id="@+id/animal_button"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:paddingRight="20dip"
            android:drawableRight="@drawable/nemo_mini"
            android:gravity="center|center_vertical"
            android:background="#eb8f5d"
            android:text="@string/category2"
            android:textSize="23dp"
            android:soundEffectsEnabled="false"/>


        <Button
            android:id="@+id/logo_button"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="20dip"
            android:drawableLeft="@drawable/nemo_mini"
            android:background="#ebc05d"
            android:gravity="center|center_vertical"
            android:text="@string/category3"
            android:textSize="23dp"
            android:soundEffectsEnabled="false"/>

        <Button
            android:id="@+id/my_level_button"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:paddingRight="20dip"
            android:drawableRight="@drawable/nemo_mini"
            android:background="#7db71e"
            android:gravity="center|center_vertical"
            android:text="@string/category4"
            android:textSize="23dp"
            android:soundEffectsEnabled="false"/>

    </LinearLayout>

</ScrollView>
